@@ -2,6 +2,7 @@ VERSION 1.0.0
 -------------
 Release Date: ?
 
+ - fixed debugbar notice in db section
  - fixed debugbar css reset
  - added method getScriptsPath() to Peak_Controller_Action
 
